--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,15 +1,39 @@
 ---
 driver:
   name: vagrant
+  customize:
+    memory: 4096
+  vm_hostname: node-1
+  network:
+    - ["private_network", {ip: '10.20.1.101'}]
+  vagrantfiles:
+    - test/Files/Vagrant.Disk.rb
 
 provisioner:
-  name: chef_solo
+  name: chef_zero
 
 platforms:
   - name: centos-6.6
 
 suites:
   - name: default
+    data_bags_path: test/integration/data_bags
     run_list:
-      - recipe[mapr_installation::install_prereq_packages]
+      - recipe[users]
+      - recipe[ssh-keys]
+      - recipe[mapr_installation::default]
     attributes:
+      ssh_keys_use_encrypted_data_bag: false
+      users:
+        singleusers: ['mapr']
+      java:
+        version: 'java-1.8.0-openjdk-devel'
+        home: '/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.51-1.b16.el6_7.x86_64/'
+      mapr:
+        cldb: ['node-1']
+        zk: ['node-1']
+        rm: ['node-1']
+        hs: 'node-1'
+        ws: ['node-1']
+      ssh_keys:
+        mapr: ['mapr']
