--- a/.kitchen.ec2.yml
+++ b/.kitchen.ec2.yml
@@ -10,6 +10,10 @@ driver:
   associate_public_ip: false
   interface: private
   user_data: <%= ENV['USER_DATA_PATH'] %>
+  block_device_mappings:
+    - ebs_device_name: /dev/sdb
+      ebs_volume_size: 5
+      ebs_delete_on_termination: true
 
 provisioner:
   name: chef_zero
